finished basic CSS of signIn page. fixed home page video being too wide. changed true/false to yes/no on currListing page. centered nav-bar.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,8 @@
 html {
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+
 }
 
 .nav a {
@@ -12,9 +14,11 @@ html {
     color: #fff;
     font-family: 'Lato', sans-serif;
     font-size: 18px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     padding: 0 40px;
+    list-style: none;
+
 }
 
 .nav a:hover {
@@ -24,6 +28,7 @@ html {
     background-color: #000;
     height: 84px;
     line-height: 5;
+    text-align: center;
 }
 
 body {
@@ -55,7 +60,7 @@ body {
     margin: 0 0;
 }
 
-h2 {
+.jumbotron h2 {
     position: absolute;
     top:100px;
     left: 100px;
@@ -138,6 +143,8 @@ thead {
     position:relative;
     height: 30%;
     width: 30%;
+    max-width: 400px;
+    max-height: 400px;
     display:inline-block;
     margin-left: 2%;
     margin-bottom: 20px;
@@ -228,7 +235,7 @@ display: block;
   width: auto; 
   height: auto;
   z-index: -100;
-  margin: 0, 0;
+  background-size: cover;
 }
 
 tbody {
@@ -265,9 +272,11 @@ tbody {
     background-color: teal;
     margin-top: 100px;
     text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.sign-in-block p {
+.sign-in-block h2 {
     color: #000;
 }
 
